@@ -8,6 +8,7 @@ plyr 0.1.6 (2008-XX-XX) ---------------------------------------------------
 * fix bug in daply which prevented it from working correctly when data frame was split by multiple variables
 * all ply functions deal more elegantly when given function names: can supply a vector of function names, and name is used as label in output
 * ddply: first variable now varies slowest as you'd expect
+* massive speed ups for splitting large arrays, in a similar way to data frames
 
 plyr 0.1.5 (2008-02-23) ---------------------------------------------------
 
